--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
     "@chakra-ui/icons": "^1.0.0-rc.8",
+    "@vercel/node": "^1.8.5",
     "framer-motion": "^2.9.4",
+    "mongodb": "^3.6.3",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.5.33",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
