--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^3.6.3",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
     "@types/mongodb": "^3.5.33",
