--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.11.0"
+    "react-icons": "^3.11.0",
+    "swr": "^0.3.9"
   },
   "devDependencies": {
     "@types/mongodb": "^3.5.33",
